After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 667388 - Introspection annotation fixes for nullable return types
Introspection annotation fixes for nullable return types
Status: RESOLVED FIXED
Product: evolution-data-server
Classification: Platform
Component: general
3.4.x (obsolete)
Other All
: Normal normal
: ---
Assigned To: Evolution Shell Maintainers Team
Evolution QA team
Depends on:
Blocks:
 
 
Reported: 2012-01-05 22:26 UTC by Philip Withnall
Modified: 2013-09-14 16:55 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Introspection fixes for nullable return types (9.51 KB, patch)
2012-01-05 22:28 UTC, Philip Withnall
committed Details | Review

Description Philip Withnall 2012-01-05 22:26:38 UTC
Patch coming up with some (allow-none) annotations and documentation changes in libebook and libedataserver.

These should all make the documentation match the code, but I wasn't entirely sure about some of the vCard stuff. The patch almost certainly doesn't fix all the missing annotations in libebook either; just the ones which I need for libfolks.
Comment 1 Philip Withnall 2012-01-05 22:28:26 UTC
Created attachment 204711 [details] [review]
Introspection fixes for nullable return types
Comment 2 Matthew Barnes 2012-01-11 18:55:55 UTC
Looks fine to me except the "--metadatadir=." line -- having just fixed bug #667698, I think that should be "--metadatadir=$(srcdir)".

For future reference, you can just commit annotation fixes straight away.  I consider it a documentation improvement and doesn't really require peer review if the committer is trusted (which you are).
Comment 3 Philip Withnall 2012-01-11 22:11:12 UTC
Comment on attachment 204711 [details] [review]
Introspection fixes for nullable return types

Committed to master with the $(srcdir) fix. Thanks!

commit e28afe79702ef9ae924e2c9620a2574177a965ac
Author: Philip Withnall <philip@tecnocode.co.uk>
Date:   Thu Jan 5 22:27:02 2012 +0000

    Bug 667388 — Introspection annotation fixes for nullable return types
    
    Add some missing (allow-none) annotations, as well as some (transfer full)
    annotations, to libebook and libedataserver. Update the documentation to
    match, and to be a little more descriptive in places.
    
    Closes: https://bugzilla.gnome.org/show_bug.cgi?id=667388

 addressbook/libebook/e-contact.c |   10 +++++-----
 addressbook/libebook/e-vcard.c   |   30 ++++++++++++++++--------------
 libedataserver/e-source-list.c   |    2 +-
 vala/EBook-1.2.metadata          |    7 +++++++
 vala/EDataServer-1.2.metadata    |    1 +
 vala/Makefile.am                 |    7 ++++++-
 6 files changed, 36 insertions(+), 21 deletions(-)