Bug 667388 — Introspection annotation fixes for nullable return types

Add some missing (allow-none) annotations, as well as some (transfer full)
annotations, to libebook and libedataserver. Update the documentation to
match, and to be a little more descriptive in places.

Closes: https://bugzilla.gnome.org/show_bug.cgi?id=667388